--- a/Clase1.ipynb
+++ b/Clase1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Clase1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOzNFW9bJQxM5BIvWNE56Fd",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNl8oLikL4pSuwlpdnU8/r7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +30,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "BSbPAed1KEds"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BSbPAed1KEds",
+        "outputId": "d215f03e-8b13-4b9b-8819-07e1aa8d96d7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "print(\"Hello World\")"
       ]
     }
   ]
