--- a/Clase1.ipynb
+++ b/Clase1.ipynb
@@ -6,7 +6,7 @@
       "name": "Clase1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNl8oLikL4pSuwlpdnU8/r7",
+      "authorship_tag": "ABX9TyOcwuMB7uatwcfhk61dH8eq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Richarzone/Advanced_AI_Class/blob/main/Clase1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Richarzone/Advanced_AI_Class/blob/Testing/Clase1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -48,7 +48,8 @@
         }
       ],
       "source": [
-        "print(\"Hello World\")"
+        "print(\"Hello World\")\n",
+        "print(\"New Test\")"
       ]
     }
   ]
