Correcion de notebook

--- a/Momento-Retro-M2-1/momento-retro-1.ipynb
+++ b/Momento-Retro-M2-1/momento-retro-1.ipynb
@@ -360,12 +360,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sorpresivamente podemos ver que los resultados son precisos aunque cabe destacar que se realizaron distintas pruebas y el valor de la R^2 oscilo en un rango de 91.88% y 41.81%. El parametro de random_state, a la hora de crear las divisiones, es el responsable de crear estos cambios de precision ya que el modelo tendra que ajustarse a los resultados obtenidos y tomando en cuenta el pequeño margen de error que hay entre la clasificicacion de hombres y mujeres se producen dichos resultados. Podemos anlcar este valor para obtener mejores resultados."
+    "Sorpresivamente podemos ver que los resultados son precisos aunque cabe destacar que se realizaron distintas pruebas y el valor de la R^2 oscilo en un rango de 91.88% y 41.81%. El parametro de random_state, a la hora de crear las divisiones, es el responsable de crear estos cambios de precision ya que el modelo tendra que ajustarse a los resultados obtenidos y tomando en cuenta el pequeño margen de error que hay entre la clasificicacion de hombres y mujeres se producen dichos resultados. Podemos anlcar este valor para obtener mejores resultados, en este caso no estamos anclando el random_state por lo que cada vez que se corra obtemndremos valores diferentes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predicciones\n",
+    "Ahora haremos pruebas de predicciones con valores fuera del dataset basados en la tabla del IMC."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -373,32 +381,21 @@
      "output_type": "stream",
      "text": [
       "Valores Reales\n",
-      "0    0\n",
-      "1    1\n",
-      "2    0\n",
-      "3    1\n",
-      "4    0\n",
-      "5    1\n",
-      "6    0\n",
-      "7    1\n",
-      "8    0\n",
-      "9    1\n",
-      "Name: Sexo, dtype: int64\n",
-      "\n",
+      "0 1 0 1 0 1 0 1 0 1 \n",
       "Valores Predecidos\n",
-      "[0, 0, 0, 1, 0, 0, 0, 1, 0, 1]\n",
+      "[0, 1, 0, 0, 1, 1, 0, 1, 0, 1]\n",
       "\n",
       "Accuracy: 80.0 %\n",
       "\n",
       "Matriz de Prediccion\n",
-      "[[5 2]\n",
-      " [0 3]]\n"
+      "[[4 1]\n",
+      " [1 4]]\n"
      ]
     }
    ],
    "source": [
-    "predicciones = {\"Estatura\": [1.61, 1.69, 1.68, 1.53, 1.55, 1.63, 1.63, 1.61, 1.71, 1.59],\n",
-    "                \"Peso\": [72.21, 74.5, 74.5, 44.87, 66.33, 63.98, 70.42, 52, 77.18, 50.05],\n",
+    "predicciones = {\"Estatura\": [1.68, 1.68, 1.78, 1.78, 1.65, 1.65, 1.73, 1.73, 1.65, 1.65],\n",
+    "                \"Peso\": [66.21, 61.83, 73.36, 64.0, 58.33, 52.12, 66.63, 59.42, 64.87, 59.52],\n",
     "                \"Sexo\":[0, 1, 0, 1, 0, 1, 0, 1, 0, 1]}\n",
     "\n",
     "prediccionesDF = pd.DataFrame(predicciones)\n",
@@ -408,7 +405,9 @@
     "    predicts.append(predict_Adj(value, thetas))\n",
     "\n",
     "print(\"Valores Reales\")\n",
-    "print(prediccionesDF.Sexo)\n",
+    "\n",
+    "for i in range(len(prediccionesDF.Sexo)):\n",
+    "    print(prediccionesDF.Sexo[i], end=\" \")\n",
     "print()\n",
     "print(\"Valores Predecidos\")\n",
     "print(predicts)\n",
