Correcciones de momento 2

--- a/Momento-Retro-M2-2/reporte-momento-retro2.ipynb
+++ b/Momento-Retro-M2-2/reporte-momento-retro2.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -181,12 +181,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Nivel de Ajuste"
+    "### Predicciones\n",
+    "Las siguinetes predicciones seran con datos fuera del dataset original. Los datos estan basados en la tabla del IMC utilizando estaturas y pesos de ambos sexos. La distribucion de las respuestas seran un hombre y una mujer sucesivamente."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +210,7 @@
       "-    Resultado Esperado: 0  Resultado Real: 0\n",
       "Prediccion 8 con datos de prediccion: [1.73, 59.42]\n",
       "-    Resultado Esperado: 1  Resultado Real: 1\n",
-      "Prediccion 9 con datos de prediccion: [1.65, 64.87]\n",
+      "Prediccion 9 con datos de prediccion: [1.65, 65.87]\n",
       "-    Resultado Esperado: 0  Resultado Real: 0\n",
       "Prediccion 10 con datos de prediccion: [1.65, 59.52]\n",
       "-    Resultado Esperado: 1  Resultado Real: 1\n",
@@ -239,7 +240,7 @@
     "                        [1.65, 52.12],\n",
     "                        [1.73, 66.63],\n",
     "                        [1.73, 59.42],\n",
-    "                        [1.65, 64.87],\n",
+    "                        [1.65, 65.87],\n",
     "                        [1.65, 59.52]],\n",
     "                \"Sexo\":[0, 1, 0, 1, 0, 1, 0, 1, 0, 1]}\n",
     "\n",
@@ -296,16 +297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2500cad77c0>"
+       "<matplotlib.legend.Legend at 0x1a60dbe55b0>"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +461,7 @@
      "output_type": "stream",
      "text": [
       "{'random_state': 1}\n",
-      "Logistic Regression Test: 91.67%\n"
+      "Logistic Regression Test: 93.18%\n"
      ]
     }
    ],
@@ -487,7 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Haciendo una busqueda con un **GridSearch** nos arroja que el mejor parametro es el **random_state=1** pero el resultado sigue siendo el mismo."
+    "Haciendo una busqueda con un **GridSearch** nos arroja que el mejor parametro es el **random_state=1** pero el resultado sigue siendo el mismo debido a que el modelo no utiliza dicho parametro."
    ]
   },
   {
@@ -495,7 +496,9 @@
    "metadata": {},
    "source": [
     "## Conclusiones\n",
-    "Tras hacer el ajuste de parametros se logro un inclemento del **1.51%** subiendo a **93.18%** de **91.67%** un incremento pequeño pero bienvenido. Asi mismo con este cambio de parametros se obtuvo una mejor varianza y sesgo, reduciendo la varianza a casi **0** llendo de **0.014** a **0.007** y el sesgo de **0.083** a **0.068**. Estas mejoras ayudan a que el modelo tenga un mejor desepmeño aunque aun existen mejoras que ayudarian al modelo a alcanzar mejores resultados entre ellas destaca la confusion que aun existe para clasificar correctamente a hombres de baja estatura sin sobre peso."
+    "Tras hacer el ajuste de parametros se logro un inclemento del **1.51%** subiendo a **93.18%** de **91.67%** un incremento pequeño pero bienvenido. Asi mismo con este cambio de parametros se obtuvo una mejor varianza y sesgo, reduciendo la varianza a casi **0** llendo de **0.014** a **0.007** y el sesgo de **0.083** a **0.068**. Estas mejoras ayudan a que el modelo tenga un mejor desepmeño aunque aun existen mejoras que ayudarian al modelo a alcanzar mejores resultados entre ellas destaca la confusion que aun existe para clasificar correctamente a hombres de baja estatura sin sobre peso. Hablando mas en especifico del sesgo y varianza, concluimos con que el modelo tiene varianza baja y a pesar de que el bias parece bajo, es suficiente para crear la confusion anteriormente mencionada.\n",
+    "\n",
+    "Tambien podemos ver que el modelo no presenta overffiting ni underffiting ya que al tratar datos fuera del modelo puede clasificarlos sin problema. Los datos que se usaron para las pruebas de prediccion se escogieron de para probar que tan preciso puede ser el modelo con datos cercanos, la estatura en cada par de datos es la misma y basado en el peso puede clasificar el sexo aunque como se menciono anterior mente aun se puede mejorar."
    ]
   }
  ],
